# geocube

./: .gitignore  README.md  pyproject.toml
geocube-ml/: catalog.py  cli.py  collection.py  cube.py  ingest.py  provenance.py
geocube_ml/: catalog.py  cli.py  collection.py  grid.py  ingest.py  manifest.py  provenance.py  registry.py  validation.py
tests/: test_netcdf_ingest.py
tests/examples/: README.md  ml_starter_geocube_api.py
