[project]
name = "geocube-ml"
version = "0.1.0"
dependencies = [
  "xarray",
  "rioxarray",
  "rasterio",
  "dask",
  "zarr",
  "netcdf4",
  "pystac",
  "shapely",
  "geopandas",
  "pandas",
  "numpy",
  "typer[all]",
  "tqdm"
]

[project.scripts]
geocube = "geocube_ml.cli:app"
geocube-ml = "geocube_ml.cli:app"
